adding multilingual support

--- a/layouts/shortcodes/iframe.html
+++ b/layouts/shortcodes/iframe.html
@@ -1,1 +1,1 @@
-<iframe src="{{ index .Params 0 }}" width="1088" height="637" frameborder="0" allowfullscreen="allowfullscreen" allow="geolocation *; microphone *; camera *; midi *; encrypted-media *"></iframe>
+<iframe src="{{ index .Params 0 }}" frameborder="0" allowfullscreen="allowfullscreen" allow="geolocation *; microphone *; camera *; midi *; encrypted-media *"></iframe>
